sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:8: error: value ong is not a member of Long
      ecart=2Long(ecart/1.3)
              ^