sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
	var ecart=getNombreValeurs();
  var fin=false;
  do {
    fin=true
    if(ecart>1){
      ecart=2Long(ecart/1.3)
    }
    var i=0;
    while(i+ecart<getNombreValeurs()){
      if(plusPetit(i,i+ecart)){
        echange(i, i+ecart)
        i=i+1
        fin=false
      }
    }
  }
  while(ecart<1 && fin==false)
}